<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart = "32dp"
    android:paddingLeft = "32dp"
    android:paddingRight = "32dp"
    android:paddingTop = "32dp"
    android:paddingBottom = "32dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_id" />

        <TextView
            android:id="@+id/userIdValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timestamp" />

        <TextView
            android:id="@+id/timestampValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location" />

        <TextView
            android:id="@+id/locationValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/parentHashes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parent_hashes" />

        <TextView
            android:id="@+id/parentHashesValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/transactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transactions" />

        <TextView
            android:id="@+id/transactionsValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/signature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signature" />

        <TextView
            android:id="@+id/signatureValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/cryptoHash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crypto_hash" />

        <TextView
            android:id="@+id/cryptoHashValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>