<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:paddingStart = "32dp"
    android:paddingLeft = "32dp"
    android:paddingRight = "32dp"
    android:paddingTop = "8dp"
    android:paddingBottom = "8dp"
    tools:context="edu.cornell.em577.tamperprooflogging.presentation.UserPanelActivity">

    <Button
        android:id="@+id/addBlockButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="222dp"
        android:onClick="addBlockButtonListener"
        android:text="@string/add_block" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="165dp"
        android:onClick="viewBlockBrowserButtonListener"
        android:text="@string/view_blockchain" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp"
        android:onClick="viewRecordRequestButtonListener"
        android:text="@string/view_record_requests" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="232dp"
        android:onClick="viewUserCertificateButtonListener"
        android:text="@string/view_user_certificates" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="32dp"
        android:onClick="logoutButtonListener"
        android:text="@string/logout" />


    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:onClick="requestRecordsButtonListener"
        android:text="@string/request_records" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:onClick="viewRecordsButtonListener"
        android:text="@string/view_records" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="187dp"
        android:background="#c0c0c0" />

</RelativeLayout>