<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:paddingStart = "32dp"
    android:paddingLeft = "32dp"
    android:paddingRight = "32dp"
    android:paddingTop = "32dp"
    android:paddingBottom = "32dp"
    tools:context="edu.cornell.em577.tamperprooflogging.presentation.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/enterPassword"
        android:layout_centerInParent="true"
        android:textColorHint="#ffff299f"
        android:hint="@string/enter_password" />

    <TextView
        android:id="@+id/incorrectCredentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="143dp"
        android:text="@string/incorrect_credentials"
        android:textColor="#FF0000"
        android:textSize="25sp"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/enterPassword"
        android:layout_alignEnd="@+id/enterPassword"
        android:layout_alignLeft="@+id/enterPassword"
        android:layout_alignStart="@+id/enterPassword"
        android:onClick="loginButtonListener"/>

</RelativeLayout>