<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:paddingStart = "32dp"
    android:paddingLeft = "32dp"
    android:paddingRight = "32dp"
    android:paddingTop = "32dp"
    android:paddingBottom = "32dp"
    tools:context="edu.cornell.em577.tamperprooflogging.presentation.AddUserActivity">

    <EditText
        android:inputType="text"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/enterUserIdentifier"
        android:hint="@string/enter_user_identifier"
        android:focusable = "true"
        android:textColorHighlight = "#ff7eff15"
        android:textColorHint = "#ffff25e6"
        android:layout_marginTop = "46dp"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true" />

    <EditText
        android:inputType="text"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/enterUserLocation"
        android:hint="@string/enter_user_location"
        android:focusable = "true"
        android:textColorHighlight = "#ff7eff15"
        android:textColorHint = "#ffff25e6"
        android:layout_below="@+id/enterUserIdentifier"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/enterUserPassword"
        android:layout_below="@+id/enterUserLocation"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true"
        android:textColorHint="#ffff299f"
        android:hint="@string/enter_user_password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_user"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true"
        android:onClick="addUserButtonListener"/>

</RelativeLayout>