<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android = "http://schemas.android.com/apk/res/android"
xmlns:tools = "http://schemas.android.com/tools"
android:layout_width = "match_parent"
android:layout_height = "match_parent"
android:paddingStart = "32dp"
android:paddingLeft = "32dp"
android:paddingRight = "32dp"
android:paddingTop = "8dp"
android:paddingBottom = "8dp"
tools:context="edu.cornell.em577.tamperprooflogging.presentation.RequestRecordsActivity">


<EditText
    android:inputType="text"
    android:layout_width = "wrap_content"
    android:layout_height = "wrap_content"
    android:id = "@+id/enterRecordId"
    android:hint="@string/enter_record_id"
    android:focusable = "true"
    android:textColorHighlight = "#ff7eff15"
    android:textColorHint = "#ffff25e6"
    android:layout_marginTop = "46dp"
    android:layout_alignParentLeft = "true"
    android:layout_alignParentStart = "true"
    android:layout_alignParentRight = "true"
    android:layout_alignParentEnd = "true" />

<Button
    android:id="@+id/addRecordId"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignStart="@+id/enterRecordId"
    android:layout_alignLeft="@+id/enterRecordId"
    android:layout_alignTop="@+id/requestRecordsById"
    android:onClick="addRecordIdButtonListener"
    android:text="@string/add_record_id" />

<Button
    android:id="@+id/requestRecordsById"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignEnd="@+id/enterRecordId"
    android:layout_alignRight="@+id/enterRecordId"
    android:layout_alignParentTop="true"
    android:layout_marginTop="152dp"
    android:onClick="requestRecordsByIdButtonListener"
    android:text="@string/request_records" />

<ListView
    android:id="@+id/transactionList"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="35dp" />

<TextView
    android:id="@+id/status"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:gravity="center"
    android:layout_centerInParent="true"
    android:textSize="25sp"
    android:visibility="invisible" />
</RelativeLayout>